# california-housing-prices

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: python-tests.yml
notebooks/: Analyse_des_features.ipynb  experimentations.ipynb  mlflow.db
src/api/: app.py
src/interface/: Dockerfile  interface.py
src/interface/pages/: data_exploration.py
src/ml/: drift_dectection.py  feature_analysis.py  train.py
src/ui/: Dockerfile  app.py
src/ui/pages/: data_exploration.py  feature_analysis.py
tests/: test_api.py  test_interface.py  test_train.py  test_ui.py
