[project]
name = "mlops-immobilier"
version = "0.2.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "mlflow (>=3.0.0,<4.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "evidently (>=0.7.10,<0.8.0)",
    "shap (>=0.48.0,<0.49.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.5"
ipykernel = "^6.30.1"
nbformat = "^5.10.4"

