[project]
name = "mlops-immobilier"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.7.14",
    "fastapi[standard]>=0.117.1",
    "mlflow>=3.4.0",
    "scikit-learn>=1.7.2",
    "shap>=0.48.0",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
