[project]
name = "california-housing-prices"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evidently>=0.7.17",
    "fastapi[standard]>=0.135.1",
    "mlflow>=3.10.0",
    "scikit-learn>=1.8.0",
    "shap>=0.48.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.ruff.lint]
select = ["E","F","I"]
ignore = ["E501"]
